Add quick and dirty test engine